gcc/testsuite/rust/rustc/ui/parser/issue-43692.rs
fn main() {
    '\u{_10FFFF}'; // { dg-error "" "" { target *-*-* } }
}

